fix: adjust social media icon spacing, change styling

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -558,12 +558,14 @@ _:-ms-fullscreen, :root .content-wrapper
 
   .nav-section-social
     border-bottom: none
+    margin-top: 20px
 
     .social-links
       grid-template-columns: repeat(5, 1fr)
       gap: 8px
       +justify-content(flex-start)
       +flex-wrap(wrap)
+      margin-left: -10px
 
   .bigcartel-credit
     margin-top: $base-padding * 2
@@ -750,28 +752,31 @@ _:-ms-fullscreen, :root .content-wrapper
     +align-items(center)
     +justify-content(center)
     +flex-shrink(0)
-    background: $button-background-color
+    //background: $button-background-color
+    background: transparent
+    border: 0px solid $primary-text-color
     border-radius: 50%
-    color: $button-text-color
-    height: 40px
+    color: $primary-text-color
+    height: 42px
     text-align: center
-    width: 40px
+    width: 42px
 
     &:hover, &:focus
-      background: $button-hover-background-color
+      background: $link-hover-color
 
       svg
-        fill: $button-hover-text-color
+        fill: $primary-text-color
 
     svg
       display: block
-      fill: $button-text-color
-      height: 18px
-      width: 18px
+      fill: $primary-text-color
+      height: 24px
+      width: 24px
 
-.nav-section-credit
-  border: none !important
-  padding-top: 30px
+      &.reddit-icon,
+      &.discord-icon
+        width: 26px
+        height: 26px
 
 .bigcartel-credit
   font-size: 14px
@@ -864,7 +869,7 @@ footer
         +flexbox
 
     .nav-section-social
-      padding-bottom: 20px
+      padding: 0 20px 20px 20px
 
     .nav-section-pages
       +flexbox
